--- a/src/assets/styles/cmps/_board-index.scss
+++ b/src/assets/styles/cmps/_board-index.scss
@@ -4,10 +4,9 @@
     grid-template-columns: minmax(30px,auto) 1fr;
     column-gap: 10px;
     overflow: hidden;
-    // transition: grid-template-columns 2s;
-    
-    // & .board-sidebar .close-sidebar:hover{
-    //     grid-template-columns: 255px 1fr;
-        
-    // }
+    @include for-mobile-layout {
+        grid-template-columns: 1fr;
+
+
+    }
 }
