--- a/src/assets/styles/cmps/_board-header.scss
+++ b/src/assets/styles/cmps/_board-header.scss
@@ -1,7 +1,7 @@
 .board-header-wrapper {
     grid-row: 1;
     // padding: 20px 30px 0px 32px;
-    padding-top: 16px;
+    // padding-top: 16px;
     position: sticky;
     left: 0;
     top: 0;
@@ -10,6 +10,9 @@
     z-index: 99999;
     transition: all 0.2s ease-in-out;
 
+   
+        padding: 20px 30px 0px 32px;
+        // padding-top: 16px;
     
 
     
@@ -19,8 +22,8 @@
         display: grid;
         grid-template-rows: auto auto;
         row-gap: em(6px);
-        margin: 20px 30px 0px 32px;
-        transition: 0.2s ea;
+        // margin: 20px 30px 0px 32px;
+        transition: 0.2s ease;
         
 
         &.collapsed {
