fix margin in botton

--- a/src/assets/styles/views/HomePage.scss
+++ b/src/assets/styles/views/HomePage.scss
@@ -165,7 +165,7 @@
     border-bottom: none;
     gap: 1em;
     white-space: nowrap;
-    margin-bottom: 1em;
+    // margin-bottom: 1em;
 }
 
 .cta-button:hover {
