--- a/src/assets/styles/cmps/_board-details.scss
+++ b/src/assets/styles/cmps/_board-details.scss
@@ -11,6 +11,12 @@
     border-radius: 0.5em 0 0 0;
     // min-width: 0;
     width: 100%;
+    @include for-mobile-layout {
+        >div{
+            display: none;
+        }
+        overflow: hidden;
+    }
 }
 
 .loader-container{
