--- a/src/assets/styles/cmps/_board-preview.scss
+++ b/src/assets/styles/cmps/_board-preview.scss
@@ -11,6 +11,8 @@
     .title-container {
         display: grid;
         grid-auto-flow: column;
+
+
     }
 
     .editable-container-cmp {
@@ -20,8 +22,9 @@
         text-align: start;
         align-items: center;
         transition: all 0.1s ease-in-out;
-        
-        .editable-title-dyn-cmp, .editable-title-dyn-cmp-input {
+
+        .editable-title-dyn-cmp,
+        .editable-title-dyn-cmp-input {
             font-family: 'Figtree', sans-serif;
             font-size: 14px;
             width: 95%;
@@ -29,25 +32,26 @@
             border-radius: em(4px);
             padding-inline-start: 3px;
             // padding: 4px;
-            
+
             &:hover {
                 border-color: $clr-border;
                 transition: border-color 0.3s ease-in-out;
                 cursor: pointer;
             }
-    
-            &:focus-visible, &:focus {
+
+            &:focus-visible,
+            &:focus {
                 border: none;
-                outline: 1px solid #0073ea ;
+                outline: 1px solid #0073ea;
             }
         }
 
         .editable-title-dyn-cmp {
             color: #909090;
         }
-    
+
         .editable-title-dyn-cmp-input {
-            display: block; // Ensures the input is block-level for full width
+            display: block;
         }
     }
 
@@ -59,24 +63,25 @@
         align-items: center;
         transition: all 0.1s ease-in-out;
         margin-inline-end: 7px;
-        .editable-title-cell-cmp-span, .editable-title-cell-input {
+        font-size: 1rem;
+
+
+        .editable-title-cell-cmp-span,
+        .editable-title-cell-input {
             font-family: 'Figtree', sans-serif;
-            font-size: 14px;
-            // width: 95%;
             border: 1px solid transparent;
             border-radius: em(4px);
-            // padding-inline-start: 3px;
-            // padding: 4px;
-            
+
             &:hover {
                 border-color: $clr-border;
                 transition: border-color 0.3s ease-in-out;
-                cursor: pointer;
+                cursor: text;
             }
-    
-            &:focus-visible, &:focus {
+
+            &:focus-visible,
+            &:focus {
                 // border: 1px solid transparent;
-                outline: 1px solid #0073ea ;
+                outline: 1px solid #0073ea;
             }
         }
 
@@ -87,19 +92,18 @@
             // padding-block-end: 2px;
             align-self: center;
             height: 24px;
-            
+
         }
-    
+
         .editable-title-cell-input {
-            display: block; // Ensures the input is block-level for full width
+            display: block;
             padding-inline: 5px;
             font-size: em(14px);
-            // padding-block-start: 2px;
-            // padding-block-end: 2px;
             height: 24px;
         }
 
     }
+
     .add-group-bottom-container {
         position: sticky;
         left: 40px;
@@ -116,8 +120,10 @@
         background-color: #fff;
         cursor: pointer;
         margin-bottom: 40px;
+        
+
         &:hover {
-            background-color:rgba(103, 104, 121, 0.1);
+            background-color: rgba(103, 104, 121, 0.1);
         }
 
         .bottom-add-group-btn {
@@ -131,5 +137,9 @@
             //     background:rgba(103, 104, 121, 0.1);
             // }
         }
+    }
+
+    @include for-mobile-layout {
+        overflow: auto;
     }
 }
