--- a/src/assets/styles/cmps/_boardhome.scss
+++ b/src/assets/styles/cmps/_boardhome.scss
@@ -14,61 +14,61 @@
         display: none;
     }
 
-    @include for-mobile-layout {
-        display: flex;
-        // flex-direction: rows;
-        overflow: hidden;
+    // @include for-mobile-layout {
+    //     display: flex;
+    //     // flex-direction: rows;
+    //     overflow: hidden;
 
-        .activity-wrapper {
-            display: flex;
-            gap: 20px;
+    //     .activity-wrapper {
+    //         display: flex;
+    //         gap: 20px;
 
-            .activity-title {
-                color: #504F54;
-            }
+    //         .activity-title {
+    //             color: #504F54;
+    //         }
 
-            .activity-card {
-                padding: 16px;
-                display: flex;
-                flex-direction: column;
-                row-gap: .8em;
-                height: em(164px);
-                width: em(330px);
-                background-color: #C9F4E1;
-                border-radius: 1em;
+    //         .activity-card {
+    //             padding: 16px;
+    //             display: flex;
+    //             flex-direction: column;
+    //             row-gap: .8em;
+    //             height: em(164px);
+    //             width: em(330px);
+    //             background-color: #C9F4E1;
+    //             border-radius: 1em;
 
-                .activity-card-top {
+    //             .activity-card-top {
 
-                    display: flex;
-                    justify-content: space-between;
-                    // align-items: center;
+    //                 display: flex;
+    //                 justify-content: space-between;
+    //                 // align-items: center;
 
-                    .activity-img {
-                        width: 40px;
-                        height: 40px;
-                        border-radius: .7em;
-                        box-shadow: 0px 1px 8px #65656522;
+    //                 .activity-img {
+    //                     width: 40px;
+    //                     height: 40px;
+    //                     border-radius: .7em;
+    //                     box-shadow: 0px 1px 8px #65656522;
 
 
-                    }
+    //                 }
 
-                    .activity-member {
-                        width: 30px;
-                        height: 30px;
-                        margin-right: 10px;
-                    }
-                }
+    //                 .activity-member {
+    //                     width: 30px;
+    //                     height: 30px;
+    //                     margin-right: 10px;
+    //                 }
+    //             }
 
-                .activity-desc {
-                    font-family: poppins;
-                    font-size: 1em;
-                    // padding-bottom: 1.2em;
-                    line-height: normal;
+    //             .activity-desc {
+    //                 font-family: poppins;
+    //                 font-size: 1em;
+    //                 // padding-bottom: 1.2em;
+    //                 line-height: normal;
 
-                }
-            }
-        }
-    }
+    //             }
+    //         }
+    //     }
+    // }
 
     & .board-home-header {
         display: flex;
@@ -116,10 +116,10 @@
         background-color: #fff;
         padding-inline: 20px;
 
-        @include for-mobile-layout {
+        // @include for-mobile-layout {
 
-            padding-inline: 0;
-        }
+        //     padding-inline: 0;
+        // }
 
 
 
@@ -133,32 +133,32 @@
             margin-top: 16px;
             padding-inline: 40px;
 
-            @include for-mobile-layout {
-                display: flex;
-                flex-direction: column;
-                overflow: hidden;
-                border-radius: 0.5em 0 0 0;
-                box-shadow: none;
-                margin-top: 26px;
-                padding-inline: 20px;
+            // @include for-mobile-layout {
+            //     display: flex;
+            //     flex-direction: column;
+            //     overflow: hidden;
+            //     border-radius: 0.5em 0 0 0;
+            //     box-shadow: none;
+            //     margin-top: 26px;
+            //     padding-inline: 20px;
 
 
 
-                & .board-image {
-                    display: block;
-                    width: 60px;
-                }
+                // & .board-image {
+                //     display: block;
+                //     width: 60px;
+                // }
 
 
-                & .quick-search-item-image {
-                    display: none;
-                }
+                // & .quick-search-item-image {
+                //     display: none;
+                // }
 
-                & .boardIcon {
-                    display: none;
-                }
+                // & .boardIcon {
+                //     display: none;
+                // }
 
-            }
+            // }
 
             .recently-visited-acord {
                 display: grid;
@@ -167,13 +167,13 @@
                 column-gap: 7px;
                 align-items: center;
 
-                @include for-mobile-layout {
-                    display: flex;
-                    flex-direction: column;
-                    gap: 14px;
-                    align-items: flex-start;
+                // @include for-mobile-layout {
+                //     display: flex;
+                //     flex-direction: column;
+                //     gap: 14px;
+                //     align-items: flex-start;
 
-                }
+                // }
                 svg {
                     cursor: pointer;
                 }
@@ -204,7 +204,7 @@
 
                 .board-home-card-container {
                     display: grid;
-                    // width: max-content;
+                    width: max-content;
                     height: min-content;
                     grid-template-rows: 140px 2em;
                     justify-items: start;
@@ -216,9 +216,9 @@
                     cursor: pointer;
                     transition: 0.2s;
 
-                    @include for-mobile-layout {
-                        display: flex;
-                    }
+                    // @include for-mobile-layout {
+                    //     display: flex;
+                    // }
 
                     &:hover {
                         box-shadow: 0px 6px 20px rgba(0, 0, 0, 0.2);
@@ -230,9 +230,9 @@
                         max-height: 140px;
 
 
-                        @include for-mobile-layout {
-                            height: 60px;
-                        }
+                        // @include for-mobile-layout {
+                        //     height: 60px;
+                        // }
 
                     }
 
