--- a/src/assets/styles/cmps/_group-list.scss
+++ b/src/assets/styles/cmps/_group-list.scss
@@ -126,7 +126,6 @@
             grid-template-columns: 200px 150px 150px 150px 200px 100px 100px 100px 100px minmax(60px, 1fr);
             // grid-auto-columns: minmax(100px, 1fr);
             margin-bottom: 0;
-
             .task-effect-box,
             .task-actions,
             .blank-cell,
@@ -137,6 +136,73 @@
 
         .dyn-cell.header-item {
             font-size: em(14px);
+            position: relative;
+            justify-content: center;
+
+            .editable-container-title-header {
+                // margin-inline-start: 7px;
+                height: 100%;
+                display: grid;
+                text-align: start;
+                align-items: center;
+                transition: all 0.1s ease-in-out;
+                margin-inline-end: 7px;
+                font-size: 1rem;
+                // width: min-content;
+                padding: 3px;
+        
+        
+                .editable-title-header-cmp-span,
+                .editable-title-header-input {
+                    font-family: 'Figtree', sans-serif;
+                    border: 1px solid transparent;
+                    border-radius: em(4px);
+        
+                    &:hover {
+                        border-color: $clr-border;
+                        transition: border-color 0.3s ease-in-out;
+                        cursor: text;
+                    }
+        
+                    &:focus-visible,
+                    &:focus {
+                        // border: 1px solid transparent;
+                        outline: 1px solid #0073ea;
+                    }
+                }
+        
+                .editable-title-header-cmp-span {
+                    width: max-content;
+                    padding-inline: 5px;
+                    padding-block-start: 2px;
+                    // padding-block-end: 2px;
+                    align-self: center;
+                    
+        
+                }
+        
+                .editable-title-header-input {
+                    display: block;
+                    // padding-inline: 5px;
+                    font-size: em(14px);
+                    height: 24px;
+                    width: 100%;
+                    justify-self: center;
+                    margin-inline-start: 5px;
+                }
+        
+            }
+
+
+            &:hover .column-actions {
+                opacity: 1;
+            }
+            .column-actions{
+                transition: 0.3s;
+                position: absolute;
+                right: 5px;
+                opacity: 0;
+            }
         }
 
         .group-preview-title-container {
