--- a/src/assets/styles/cmps/_collapsed-group.scss
+++ b/src/assets/styles/cmps/_collapsed-group.scss
@@ -102,20 +102,22 @@
                     border-left: 0.4em solid rgb(255, 202, 0);
                     border-bottom-left-radius: 0.6em;
                     border-bottom: 1px solid $clr-border;
+                    grid-column: 1 / 3;
+                    position: sticky;
+                    left: 0px;
+                    background: white;
                     display: flex;
                     align-items: center;
+                    position: sticky;
+                    left: 40px;
+
+                   
 
                     & span {
                         margin-left: em(36px);
                         color: #676879;
                     }
 
-                  
-
-
-                    position: sticky;
-                    left: 40px;
-                    background: white;
 
                     &.stats-cell-container {
                         padding: 0;
