--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -10,61 +10,31 @@
     text-align: center;
     position: relative;
 
-    // &:hover {
+    &:hover {
+        background-color: rgb(245, 246, 248);
 
-    //     &:has(.dyn-cell),
-    //     & .task-preview-title-container {
-    //         background-color: rgb(245, 246, 248);
-    //     }
-
-
-    //     .task-effect-box {
-    //         opacity: 1;
-    //     }
-
-    //     & .status,
-    //     .priority {
-    //         opacity: 0.8;
-    //     }
-    // }
-
-    // &:has(.active-cell) {
-    //     background: rgb(204, 229, 255);
-
-    //     .task-effect-box {
-    //         opacity: 0;
-    //     }
-        
-    // }
-// ---------------------
-        &:hover {
-            background-color: rgb(245, 246, 248);
-
-            .dyn-cell,
-            .task-preview-title-container {
-                background-color: inherit;
-            }
-
-            .task-effect-box {
-                opacity: 1;
-            }
-
-            .status,
-            .priority {
-                opacity: 0.8;
-            }
+        .dyn-cell,
+        .task-preview-title-container {
+            background-color: inherit;
         }
-    
 
-    // Styles for items marked as active
+        .task-effect-box {
+            opacity: 1;
+        }
+
+        .status,
+        .priority {
+            opacity: 0.8;
+        }
+    }
+
     &:has(.active-cell) {
         background: rgb(204, 229, 255);
+
         .task-effect-box {
             opacity: 0;
         }
     }
-// }
-// --------------------
 
 
     .task-effect-box {
@@ -210,18 +180,20 @@
         // height: 100%;
     }
 
-
-
-
-
-
-
     .dyn-cell.title div {
         margin-inline-start: 36px;
+
+
+        @include for-mobile-layout {
+            margin-inline-start: 4px;
+        }
     }
 
     .dyn-cell.title {
         border-bottom: 1px solid #d0d4e4;
+        text-overflow: ellipsis;
+        width: 100%;
+        overflow: hidden;
     }
 
     .btn-message-container {
@@ -509,9 +481,13 @@
     .task-title-cell {
         display: grid;
         grid-auto-flow: column;
-        grid-template-columns: 1fr 65px;
+        grid-template-columns: 1fr .15fr;
         border-left: none;
         border-right: none;
+
+        @include for-mobile-layout {
+            grid-template-columns: 194px;
+        }
     }
 
     & .add-task-sticky-container {
@@ -558,8 +534,9 @@
         justify-content: center;
         align-items: center;
         border-right: 1px solid #d0d4e4;
+
         @include for-mobile-layout {
-           display: none;
+            display: none;
         }
     }
 
@@ -586,17 +563,30 @@
     }
 
     & .group-statistics-fill {
-        // border: 1px solid $clr-border;
+        grid-column: 1 / 3;
+        // position: sticky;
         height: em(36px);
         border-bottom: none;
         border-left: none;
         border-top: none;
-        background-color: transparent;
-        // box-shadow: 0 4px 8px #0003;
-        // margin-right: -10px;
-        // clip-path: inset(0 -10px 0 0); 
+        background-color: white;
         z-index: 2;
         box-shadow: 1px 8px 0 -1px $bgc-main, 0 8px 9px -9px rgba(0, 0, 0, 0.1);
+        display: flex;
+        align-items: center;
+        position: sticky;
+        left: 0;
+
+        @include for-mobile-layout {
+            grid-column: 1 / 3;
+
+            // grid-column: none;
+            // position: relative;
+            // grid-column: 1 / 3;
+
+            // left: 0px;
+            // background: none;
+        }
     }
 
     & .stats-clrs-container {
