--- a/src/assets/styles/cmps/_Board-sidebar.scss
+++ b/src/assets/styles/cmps/_Board-sidebar.scss
@@ -347,6 +347,8 @@
     //     }
     // }
 
-
+    .textField_0272890e16 .inputWrapper_c9ca15ceee .input_fc606b7266.inputHasIcon_e429f386dd{
+        width: 14em;
+    }
 
 }
