--- a/src/assets/styles/cmps/_group-list.scss
+++ b/src/assets/styles/cmps/_group-list.scss
@@ -1,6 +1,24 @@
 .group-list {
     display: grid;
 
+    .mobile-border {
+        // display: none;
+        position: absolute;
+
+        @include for-mobile-layout {
+            pointer-events: none;
+            z-index: 99999;
+            top: 127px;
+            left: -5px;
+            width: 200px;
+            height: 900px;
+            box-shadow: 31px 0px 47px -41px rgba(0, 0, 0, 0.74);
+            -webkit-box-shadow: 3px 4px 4px 0px rgba(0, 0, 0, 0.12);
+            -moz-box-shadow: 31px 0px 47px -41px rgba(0, 0, 0, 0.74);
+        }
+
+    }
+
     .task-list {
         display: grid;
         grid-template-columns: subgrid;
@@ -12,25 +30,17 @@
         grid-auto-flow: column;
         grid-template-columns: subgrid;
         grid-column: 1/-1;
-        grid-auto-flow: column;
         height: 2.25em;
         align-items: center;
         text-align: center;
-        // border-right: 1px solid $clr-border;
-        // font-size: em(14px);
         position: sticky;
         background-color: $bgc-main;
         top: 158px;
         z-index: 9999;
 
         @include for-mobile-layout {
-            // overflow: hidden;
             top: 0;
-        }
 
-        @include for-mobile-layout {
-            // overflow: hidden;
-            top: 0;
         }
 
 
@@ -40,6 +50,7 @@
             width: 100%;
             height: 100%;
             background-color: #fff;
+            z-index: 1;
         }
 
         & .dyn-cell {
@@ -103,7 +114,8 @@
                 display: grid;
                 align-items: center;
                 border-bottom: 1px solid #d0d4e4;
-                ;
+
+
             }
 
             @include for-mobile-layout {
@@ -136,15 +148,17 @@
         margin-bottom: em(28px);
 
         @include for-mobile-layout {
-            grid-template-columns: 200px 150px 150px 150px 200px 100px 100px 100px 100px minmax(60px, 1fr);
-            // grid-auto-columns: minmax(100px, 1fr);
+            grid-template-columns: 196px 150px 150px 150px 200px 100px 100px 100px 100px minmax(60px, 1fr);
             margin-bottom: 0;
+
             .task-effect-box,
             .task-actions,
             .blank-cell,
             .blank-cell-add-task {
                 display: none;
             }
+
+
         }
 
         .dyn-cell.header-item {
@@ -163,37 +177,37 @@
                 font-size: 1rem;
                 // width: min-content;
                 padding: 3px;
-        
-        
+
+
                 .editable-title-header-cmp-span,
                 .editable-title-header-input {
                     font-family: 'Figtree', sans-serif;
                     border: 1px solid transparent;
                     border-radius: em(4px);
-        
+
                     &:hover {
                         border-color: $clr-border;
                         transition: border-color 0.3s ease-in-out;
                         cursor: text;
                     }
-        
+
                     &:focus-visible,
                     &:focus {
                         // border: 1px solid transparent;
                         outline: 1px solid #0073ea;
                     }
                 }
-        
+
                 .editable-title-header-cmp-span {
                     width: max-content;
                     padding-inline: 5px;
                     padding-block-start: 2px;
                     // padding-block-end: 2px;
                     align-self: center;
-                    
-        
+
+
                 }
-        
+
                 .editable-title-header-input {
                     display: block;
                     // padding-inline: 5px;
@@ -203,14 +217,15 @@
                     justify-self: center;
                     margin-inline-start: 5px;
                 }
-        
+
             }
 
 
             &:hover .column-actions {
                 opacity: 1;
             }
-            .column-actions{
+
+            .column-actions {
                 transition: 0.3s;
                 position: absolute;
                 right: 5px;
@@ -223,28 +238,20 @@
             left: 0;
             display: grid;
             grid-auto-flow: column;
-
-
             background-color: #ffffff;
             border: 1px solid #d0d4e4;
             border-bottom: none;
             left: 40px;
             grid-template-columns: 36px 1fr;
             font-size: em(14px);
+            z-index: 1;
 
             @include for-mobile-layout {
                 left: 0;
                 align-items: center;
                 grid-template-columns: 1fr;
+                z-index: 1;
 
-            }
-
-            font-size: em(14px);
-
-            @include for-mobile-layout {
-                left: 0;
-                align-items: center;
-                grid-template-columns: 1fr;
 
             }
 
@@ -266,6 +273,7 @@
                 grid-template-columns: 200px;
 
             }
+
             @include for-mobile-layout {
                 left: 0;
                 grid-template-columns: 200px;
@@ -275,6 +283,7 @@
             &.active-cell {
                 background: rgb(204, 229, 255);
             }
+
             &.active-cell {
                 background: rgb(204, 229, 255);
             }
@@ -345,6 +354,12 @@
             grid-auto-flow: column;
             // margin-left: em(6px);
             cursor: pointer;
+
+            @include for-mobile-layout {
+               button{
+                display: none;
+               }
+            }
 
             & button {
                 margin-right: em(20px);
