--- a/src/assets/styles/cmps/_task-list.scss
+++ b/src/assets/styles/cmps/_task-list.scss
@@ -486,7 +486,7 @@
         border-right: none;
 
         @include for-mobile-layout {
-            grid-template-columns: 194px;
+            grid-template-columns: em(150px) em(40px);
         }
     }
 
@@ -500,7 +500,8 @@
         left: 40px;
 
         @include for-mobile-layout {
-            left: 0
+            left: 0;
+            display: flex;
         }
 
         // border-bottom-left-radius: 0.3em;
@@ -513,7 +514,11 @@
         width: 100%;
         // border-top: 1px solid #d0d4e4;
         height: 36px;
+        @include for-mobile-layout {
+            left: 0;
+        }
     }
+
 
     & .add-task-fill-gap {
         grid-column: 3/-1;
@@ -535,9 +540,9 @@
         align-items: center;
         border-right: 1px solid #d0d4e4;
 
-        @include for-mobile-layout {
-            display: none;
-        }
+        // @include for-mobile-layout {
+        //     display: none;
+        // }
     }
 
     & .btn-message-container a {
@@ -577,15 +582,10 @@
         position: sticky;
         left: 0;
 
+        
+
         @include for-mobile-layout {
-            grid-column: 1 / 3;
-
-            // grid-column: none;
-            // position: relative;
-            // grid-column: 1 / 3;
-
-            // left: 0px;
-            // background: none;
+            grid-column: 1 / 2;
         }
     }
 
